# cargo-upgrade

./: Cargo.toml  README.md
.github/workflows/: check.yml  test_self_update.yml  tests.yml
src/: lib.rs  main.rs
