[package]
authors = ["Araxeus"]
categories = ["command-line-utilities", "development-tools::cargo-plugins"]
description = "Tiny cli utility to update all globally installed cargo crates"
edition = "2021"
homepage = "https://github.com/Araxeus/cargo-upgrade"
keywords = ["cargo", "upgrade", "update", "command", "global"]
license = "MIT"
name = "cargo-upgrade-command"
readme = "README.md"
repository = "https://github.com/Araxeus/cargo-upgrade"
version = "0.1.1"

[[bin]]
name = "cargo-upgrade"
path = "src/main.rs"

[dependencies]
colored = "2.0.0"
spinoff = "0.7.0"
